--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,13 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
-  ]
+    "tests",
+    "vendor"
+  ],
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "angular": "^1.5.0",
+    "blockUI": "blockui#*",
+    "PACE": "pace#^1.0.2"
+  }
 }
