--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,9 @@
     "bootstrap": "^3.3.6",
     "angular": "^1.5.0",
     "blockUI": "blockui#*",
-    "PACE": "pace#^1.0.2"
+    "PACE": "pace#^1.0.2",
+    "angular-ui-router": "^0.2.18",
+    "oclazyload": "^1.0.9",
+    "angular-route": "^1.5.0"
   }
 }
