--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "PACE": "pace#^1.0.2",
     "angular-ui-router": "^0.2.18",
     "oclazyload": "^1.0.9",
-    "angular-route": "^1.5.0"
+    "angular-route": "^1.5.0",
+    "bootbox.js": "bootbox#^4.4.0"
   }
 }
