--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "bootbox.js": "bootbox#^4.4.0",
     "jquery.fancytree": "fancytree#^2.15.0",
     "bootstrap-treeview": "^1.2.0",
-    "bootstrap-datepicker": "eternicode/bootstrap-datepicker#^1.6.0"
+    "bootstrap-datepicker": "eternicode/bootstrap-datepicker#^1.6.0",
+    "sweetalert": "^1.1.3"
   }
 }
